# SAFA

./: .env  .env.development  .env.local  .eslintrc.js  .gitignore  .gitmodules  DYNAMIC_PROVIDER_SELECTION_PLAN.md  Dockerfile  Dockerrun.aws.json  MANIFEST.in  README.md  accelerate_config.yaml  build.gradle  build.sh  builder.sh  buildspec.yml  checkstyle.xml  cloudbuild-build.yaml  cloudbuild-deploy.yaml  cloudbuild-dev.yaml  cloudbuild.yaml  constants.py  create_changelog.py  custom-binding.xjb  cypress.config.ts  deepspeed.json  dependabots.yml  deploy.sh  dev-imagebuild.json  dev-imagedefinition.json  dev-requirements.txt  docker-build.sh  docker-compose.yaml  docker-compose.yml  docker-run.sh  docker.sh  download_static.py  gcsfuse_run.sh  generate_reqif_code.sh  install_venv.sh  (+38 more)
gen-api/: .gitmodules  Dockerfile  buildspec.yml  create_changelog.py  hello.py  load.py  pyproject.toml  requirements.txt
gen-api/changelog/: 2.0.0.md  2.0.1.md  3.0.0.md  3.0.1.md  3.0.3.md  3.1.0.md  3.1.2.md  3.1.3.md  3.1.4.md
gen-api/data/sources/: functional_requirements.csv  project_summary.json
gen-api/gen-common/: pyproject.toml  requirements.txt
gen-api/gen-common/gen_common/clustering/: clustering_pipeline.py
gen-api/gen-common/gen_common/clustering/base/: cluster_condenser.py  cluster_dataset_creator.py  cluster_type.py  clustering_util.py  supported_cluster_sort_metrics.py
gen-api/gen-common/gen_common/clustering/methods/: supported_clustering_methods.py  supported_seed_clustering_methods.py
gen-api/gen-common/gen_common/clustering/steps/: add_orphans_to_clusters.py  create_batches.py  create_embeddings.py
gen-api/gen-common/gen_common/constants/: environment_constants.py
gen-api/gen-common/gen_common/data/creators/: mlm_pre_train_dataset_creator.py  multi_trace_dataset_creator.py  prompt_dataset_creator.py  split_dataset_creator.py  trace_dataset_creator.py
gen-api/gen-common/gen_common/data/dataframes/: abstract_project_dataframe.py  trace_dataframe.py
gen-api/gen-common/gen_common/data/exporters/: dataframe_exporter.py  prompt_dataset_exporter.py  (+2 more)
gen-api/gen-common/gen_common/graph/: edge.py  graph_builder.py  graph_runner.py
gen-api/gen-common/gen_common/infra/: base_object.py
gen-api/gen-common/gen_common/llm/: abstract_llm_manager.py  anthropic_manager.py  api_key_context.py  llm_trainer_state.py  message_meta.py  model_manager.py  open_ai_manager.py  provider_selector.py  supported_model_manager.py
gen-api/gen-common/gen_common/pipeline/: state.py  util.py
gen-api/gen-common/gen_common/summarize/: summarizer.py
gen-api/gen-common/gen_common/util/: dataframe_util.py  dict_util.py  file_util.py  json_util.py  memory_util.py  np_util.py  prompt_util.py  ranking_util.py  reflection_util.py  st_util.py  str_util.py  supported_enum.py  thread_util.py
gen-api/gen-common/gen_common_test/base/: assertions.py  object_definitions.py
gen-api/gen-common/gen_common_test/clustering/: test_add_to_dataset.py
gen-api/gen-common/gen_common_test/graph/: test_graph_builder.py
gen-api/gen-common/gen_common_test/infra/: test_definition_creator.py
gen-api/gen-common/gen_common_test/jobs/: test_job_result.py
gen-api/gen-common/gen_common_test/llm/: test_json_response_manager.py
gen-api/gen-common/gen_common_test/models/: test_model_manager.py  test_token_costs.py
gen-api/gen-common/gen_common_test/prompts/: artifact_prompt_test_util.py  test_artifact_prompt.py  test_conditional_prompt.py  test_multi_artifact_prompt.py  test_prompt_builder.py  test_prompt_builder_config.py  test_prompt_dataset_generation_method.py  test_prompt_response_manager_json.py
gen-api/gen-common/gen_common_test/relationship_manager/: test_cross_encoder_manager.py
gen-api/gen-common/gen_common_test/summarize/: test_project_summarizer.py  test_summarizer.py  test_summary.py
gen-api/gen-common/gen_common_test/testprojects/: abstract_test_project.py  api_test_project.py  csv_test_project.py  dataframe_test_project.py  entry_creator.py  prompt_test_project.py  repo_one_test_project.py  safa_test_project.py  structured_test_project.py
gen-api/gen-common/gen_common_test/util/: test_base_object.py  test_data_frame_util.py  test_dict_util.py  test_general_util.py  test_is_instance.py  test_json_util.py  test_math_util.py  test_metrics_util.py  test_param_specs.py  test_prompt_util.py  test_pythonisms_util.py  test_reflection_util.py  test_thread_util.py  test_typed_enum_dict.py  test_uncased_dict.py
gen-api/src/api/: experiment_creator.py  manage.py
gen-api/src/api/cloud/: s3_util.py
gen-api/src/api/constants/: celery_status.py  config.py  datetime_constants.py
gen-api/src/api/docs/: doc_generator.py  type_map.py
gen-api/src/api/endpoints/: auth_view.py  task_view.py  wait_view.py
gen-api/src/api/server/: __init__.py  app_endpoints.py  asgi.py  paths.py  settings.py  urls.py
gen-api/src/api/utils/: cloud_util.py  model_util.py  serializer_utility.py  view_util.py
gen-api/src/apiTests/: __init__.py  base_test.py  test_chat.py  test_chat_title.py  test_health_checks.py  test_hgen.py  test_project_summary.py  test_tgen.py  test_use_case.py
gen-api/src/apiTests/common/: data_encoder.py  request_proxy.py  test_data.py  test_data_creator.py  test_verifier.py
gen-api/src/apiTests/serializers/: test_dataset_serializer.py  test_hgen_serializer.py  test_message_serializer.py  test_prediction_serializer.py  test_summary_serializer.py
gen-api/src/scripts/: serialize.py
gen-api/tgen/: MANIFEST.in  pyproject.toml
gen-api/tgen/gen_test/health/: health_check_utils.py  test_health_job.py
gen-api/tgen/gen_test/hgen/: test_hierarchy_generator_with_clusters.py
gen-api/tgen/gen_test/res/: mock_responses.py
gen-api/tgen/requirements/: base-requirements.txt  research-requirements.txt  submodules-requirements.txt
gen-api/tgen/rqs/data/: export_artifacts.json
gen-api/tgen/rqs/hgen/: clustering.json
gen-api/tgen/rqs/huggingface/: push.json  train_st.json
gen-api/tgen/rqs/tracing/: open_ai.json  push_model.json  ranking_embeddings.json  trace_code.json
(+10195 files in other folders)
