[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgen"
version = "0.0.1"
description = "SAFA.ai generative server."
readme = "README.md"
keywords = ["traceability"]
authors = [
    { name = "Katherine Dearstyne", email = "kat@safa.ai" },
    { name = "Alberto Rodriguez", email = "alberto@safa.ai" }
]
requires-python = ">=3.10"
dependencies = [
    "fairscale",
    "fire",
    "sentencepiece==0.1.97",
    "datasets==2.14.6",
    "deepspeed",
    "huggingface-hub",
    "nltk==3.8.1",
    "numpy==1.23.0",
    "python-dotenv==0.21.1",
    "regex",
    "scikit-learn==1.0.2",
    "scipy==1.10.1",
    "tokenizers==0.15.2",
    "torch",
    "tqdm==4.66.3",
    "transformers==4.38.0",
    "typeguard==2.13.3",
    "typing_extensions==4.11.0",
    "wandb==0.13.10",
    "typing==3.7.4.3",
    "openai==0.27.4",
    "setuptools",
    "mock",
    "javac_parser==1.0.0",
    "comment_parser==1.2.4",
    "PyGithub==1.58.0",
    "accelerate==0.27.2",
    "sentence-transformers==2.5.1",
    "pandas==2.0.0",
    "anthropic==0.25.6",
    "beautifulsoup4==4.12.2",
    "chinese-whispers==0.5",
    "evaluate==0.4.1",
    "GitPython==3.1.41",
    "hdbscan==0.8.33",
    "javalang==0.13.0",
    "langchain==0.2.1",
    "langchain-core==0.2.1",
    "langchain-text-splitters==0.2.0",
    "lxml==4.9.2",
    "pypdf==4.2.0",
    "sentry-sdk==1.41.0",
    "setproctitle==1.3.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soupsieve==2.5",
    "stanza==1.8.2",
    "sympy==1.12",
    "threadpoolctl==3.3.0",
    "tiktoken==0.3.3",
    "whitenoise==6.4.0",
    "itypes==1.2.0",
    "ruamel.yaml==0.17.21"
]
[project.urls]
homepage = "https://safa.ai"  # Replace with your actual homepage URL if needed



[tool.setuptools.packages.find]
exclude = ["tgen_test*"]
