[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgen"
version = "0.0.11"
description = "SAFA.ai generative server."
readme = "README.md"
keywords = ["traceability"]
authors = [
    { name = "Katherine Dearstyne", email = "kat@safa.ai" },
    { name = "Alberto Rodriguez", email = "alberto@safa.ai" }
]
requires-python = ">=3.10"
dependencies = ['GitPython==3.1.41', 'PyGithub==1.58.0', 'accelerate==0.27.2', 'anthropic==0.28.0', 'beautifulsoup4~=4.12.3', 'chinese-whispers==0.5', 'comment-parser==1.2.4', 'datasets==2.19.2', 'evaluate==0.4.2', 'hdbscan==0.8.33', 'itypes==1.2.0', 'javac-parser==1.0.0', 'javalang==0.13.0', 'langchain-core==0.2.27', 'langchain-text-splitters==0.2.1', 'langchain==0.2.12', 'lxml==5.2.2', 'nltk==3.8.1', 'numpy==1.26.4', 'openai==1.40.2', 'pandas==2.0.0', 'pypdf==4.2.0', 'python-dotenv==1.0.1', 'ruamel.yaml==0.17.21', 'scikit-learn==1.5.0', 'scipy==1.13.1', 'sentence-transformers==3.0.1', 'sentencepiece==0.1.97', 'sentry-sdk==1.41.0', 'setproctitle==1.3.3', 'six==1.16.0', 'smmap==5.0.1', 'sniffio==1.3.1', 'soupsieve==2.5', 'stanza==1.8.2', 'sympy==1.12', 'threadpoolctl==3.3.0', 'tiktoken==0.7.0', 'tokenizers==0.19.1', 'tqdm==4.66.4', 'transformers==4.41.2', 'typeguard==4.3.0', 'typing==3.7.4.3', 'typing_extensions==4.11.0', 'wandb==0.13.10', 'whitenoise==6.4.0']
[project.urls]
homepage = "https://safa.ai"  # Replace with your actual homepage URL if needed

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tgen", "tgen_test"]

[tool.setuptools.package-data]
"tgen" = ["common/util/common_words.csv"]

[project.scripts]
tgen_download_static = "tgen.scripts.tools.download_static:main"