[metadata]
name = tgen
version = 0.0.1
authors = [{name = "Kat Dearstyne", email = "kat@safa.ai"}, {name = "Alberto Rodriguez", email = "alberto@safa.ai"}]
description = The following project encompasses all jobs relating to generating trace links.
long_description = file: README.md
keywords = traceability

[options.packages.find]
exclude =
    tgen_test*

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    fairscale
    fire
    sentencepiece
    datasets
    deepspeed
    huggingface-hub
    nltk
    numpy
    python-dotenv
    regex
    scikit-learn
    scipy
    tokenizers
    torch
    tqdm
    transformers
    typeguard
    typing_extensions
    wandb
    typing
    sklearn
    openai
    setuptools
    mock
    javac_parser
    comment_parser
    PyGithub

